# py-todo

./: .gitignore  ToDo.md  docker-compose.yaml  pyproject.toml
api/: db.py  migrate_db.py
api/cruds/: __init__.py  task.py
api/models/: task.py
api/routers/: __init__.py  done.py  task.py
api/schemas/: task.py
